[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/props/lab_floor.tres" type="Material" id=1]
[ext_resource path="res://scenes/props/lab_ceiling.tres" type="Material" id=2]
[ext_resource path="res://scenes/chars/room.gd" type="Script" id=3]
[ext_resource path="res://scenes/props/corridor_exit.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/props/wall_door.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/props/door.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/textures/exit.png" type="Texture" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 15, 0.5, 15 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 30, 1, 30 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 15, 0.5, 15 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 30, 1, 30 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 15, 8, 0.5 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 30, 1, 15 )

[sub_resource type="GIProbeData" id=7]
bounds = AABB( -16.1, -8, -15.5, 32.2, 16, 31 )
cell_size = 0.251563
to_cell_xform = Transform( 3.97516, 0, 0, 0, 3.97516, 0, 0, 0, 3.97516, 64, 31.8012, 61.6149 )
dynamic_data = PoolIntArray( 0, 8, 128, 64, 128, 1, 0, 0, 0, 0, 0, 0, 7, 0, 9, 3816, -1, -1, -1, -1, -1, -1, -1, -1, 0, 0, 8355711, 0 )
dynamic_range = 4
bias = 1.5
normal_bias = 0.0
propagation = 0.7

[sub_resource type="BoxShape" id=8]
extents = Vector3( 3, 2, 1.8 )

[node name="room" type="Spatial"]
script = ExtResource( 3 )

[node name="floor" type="Spatial" parent="."]

[node name="StaticBody" type="StaticBody" parent="floor"]

[node name="CollisionShape" type="CollisionShape" parent="floor/StaticBody"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="floor/StaticBody"]
mesh = SubResource( 2 )
material/0 = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ceiling" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 0 )

[node name="StaticBody" type="StaticBody" parent="ceiling"]

[node name="CollisionShape" type="CollisionShape" parent="ceiling/StaticBody"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="ceiling/StaticBody"]
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="wall1" type="Spatial" parent="."]
transform = Transform( 2.98023e-08, 0, 1, 0, 1, 0, -1, 0, 2.98023e-08, 14.5, 7, 0 )

[node name="StaticBody" type="StaticBody" parent="wall1"]

[node name="CollisionShape" type="CollisionShape" parent="wall1/StaticBody"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="wall1/StaticBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.5, 0 )
mesh = SubResource( 6 )
material/0 = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="wall2" type="Spatial" parent="."]
transform = Transform( 1, 0, -7.35137e-08, 0, 1, 0, 7.35137e-08, 0, 1, -1, 7, -14.5 )

[node name="StaticBody" type="StaticBody" parent="wall2"]

[node name="CollisionShape" type="CollisionShape" parent="wall2/StaticBody"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="wall2/StaticBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.5, 0 )
mesh = SubResource( 6 )
material/0 = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="GIProbe" type="GIProbe" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.5, 0 )
extents = Vector3( 16.1, 8, 15.5 )
data = SubResource( 7 )

[node name="corridor_exit" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -17, 0, 0 )

[node name="fake-door" parent="corridor_exit" instance=ExtResource( 7 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 16.5, 0.5, -17 )

[node name="wall_door3" parent="corridor_exit" instance=ExtResource( 6 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 17, 4, -17 )

[node name="corridor_entrance" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 17, 0, 32 )

[node name="fake_door" parent="corridor_entrance" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.5 )

[node name="wall_door" parent="." instance=ExtResource( 6 )]

[node name="wall_door2" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -15, 4, 0 )

[node name="door_exit" parent="." instance=ExtResource( 7 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -15.5, 0.5, 0 )

[node name="exit_sign" type="Sprite3D" parent="door_exit"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 0.502 )
texture = ExtResource( 8 )

[node name="door_entrance" parent="." instance=ExtResource( 7 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0.5, 15.5 )

[node name="Area_door" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.75, 3.5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area_door"]
shape = SubResource( 8 )

[node name="Area_entrance" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 16 )

[node name="CollisionShape2" type="CollisionShape" parent="Area_entrance"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 8 )
[connection signal="body_entered" from="Area_door" to="." method="_on_Area_door_body_entered"]
[connection signal="body_exited" from="Area_door" to="." method="_on_Area_door_body_exited"]
[connection signal="body_entered" from="Area_entrance" to="." method="_on_Area_entrance_body_entered"]
[connection signal="body_exited" from="Area_entrance" to="." method="_on_Area_entrance_body_exited"]
